name:                http-client
version:             0.1.0.0
synopsis:            An HTTP client engine, intended as a base layer for more user-friendly packages.
description:         This codebase has been refactored from http-conduit.
                     .
                     Note that, in its current state, this library is a preview release. It passes tests and seems to work correctly, but has not received a huge level of battle testing yet. I would recommend sticking with http-conduit for production usage until this library has been more thoroughly tested.
homepage:            https://github.com/snoyberg/http-client
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.HTTP.Client
                       Network.HTTP.Client.Internal
  other-modules:       Network.HTTP.Client.Body
                       Network.HTTP.Client.Connection
                       Network.HTTP.Client.Cookies
                       Network.HTTP.Client.Core
                       Network.HTTP.Client.Headers
                       Network.HTTP.Client.Manager
                       Network.HTTP.Client.Request
                       Network.HTTP.Client.Response
                       Network.HTTP.Client.Types
                       Network.HTTP.Client.Util
  build-depends:       base              >= 4.5    && < 5
                     , bytestring        >= 0.9
                     , text              >= 0.11
                     , http-types        >= 0.8
                     , blaze-builder     >= 0.3
                     , data-default
                     , time              >= 1.2
                     , network           >= 2.3
                     , zlib-bindings     >= 0.1    && <0.2
                     , containers
                     , transformers
                     , deepseq           >= 1.3    && <1.4
                     , case-insensitive  >= 1.1    && <1.2
                     , failure           >= 0.2    && <0.3
                     , base64-bytestring >= 1.0    && <1.1
                     , publicsuffixlist
                     , cookie
  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  other-modules:       Network.HTTP.ClientSpec
                       Network.HTTP.Client.ResponseSpec
                       Network.HTTP.Client.BodySpec
                       Network.HTTP.Client.HeadersSpec
  build-depends:       base
                     , http-client
                     , hspec
                     , monad-control
                     , bytestring
                     , text
                     , http-types
                     , blaze-builder
                     , data-default
                     , time
                     , network
                     , zlib-bindings
                     , containers
                     , transformers
                     , deepseq
                     , case-insensitive
                     , failure
                     , base64-bytestring
                     , zlib
