name:            http-conduit
version:         2.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        HTTP client package with conduit interface and HTTPS support.
description:
    This package uses conduit for parsing the actual contents of the HTTP connection. It also provides higher-level functions which allow you to avoid directly dealing with streaming data. See <http://www.yesodweb.com/book/http-conduit> for more information.
    .
    The @Network.HTTP.Conduit.Browser@ module has been moved to <http://hackage.haskell.org/package/http-conduit-browser/>
category:        Web, Conduit
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/http-conduit
extra-source-files: test/main.hs
                  , test/CookieTest.hs
                  , multipart-example.bin
                  , nyan.gif
                  , certificate.pem
                  , key.pem

library
    build-depends: base                  >= 4       && < 5
                 , bytestring            >= 0.9.1.4
                 , transformers          >= 0.2
                 , resourcet             >= 0.3     && < 0.5
                 , conduit               >= 0.5.5   && < 1.1
                 , http-types            >= 0.7
                 , lifted-base           >= 0.1
                 , http-client           >= 0.2
                 , http-client-tls
                 , http-client-conduit
    exposed-modules: Network.HTTP.Conduit
    ghc-options:     -Wall

test-suite test
    main-is: main.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: test

    ghc-options:   -Wall
    cpp-options:   -DDEBUG
    build-depends: base >= 4 && < 5
                 , HUnit
                 , hspec >= 1.3
                 , bytestring
                 , transformers
                 , failure
                 , conduit
                 , zlib-conduit
                 , blaze-builder-conduit
                 , utf8-string
                 , blaze-builder
                 , http-types
                 , cprng-aes
                 , tls
                 , tls-extra
                 , monad-control
                 , containers
                 , certificate
                 , case-insensitive
                 , base64-bytestring
                 , asn1-data
                 , data-default
                 , text
                 , transformers-base
                 , lifted-base
                 , time
                 , network
                 , wai >= 2.0 && < 2.1
                 , warp >= 2.0 && < 2.1
                 , warp-tls
                 , socks
                 , http-types
                 , cookie
                 , regex-compat
                 , network-conduit >= 0.6
                 , resourcet
                 , void
                 , deepseq
                 , mtl
                 , publicsuffixlist
                 , array
                 , random
                 , filepath
                 , mime-types
                 , http-client
                 , http-conduit
                 , connection
                 , http-client-multipart

source-repository head
  type:     git
  location: git://github.com/snoyberg/http-client.git
