cabal-version:   >= 1.10
name:            http-conduit
version:         2.3.9
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        HTTP client package with conduit interface and HTTPS support.
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/http-conduit>.
category:        Web, Conduit
stability:       Stable
build-type:      Simple
homepage:        https://github.com/snoyberg/http-client
extra-source-files: test/main.hs
                  , test/CookieTest.hs
                  , multipart-example.bin
                  , nyan.gif
                  , certificate.pem
                  , key.pem
                  , README.md
                  , ChangeLog.md

flag aeson
  manual: True
  description: Enable the dependency on aeson
  default: True

library
    default-language: Haskell2010
    build-depends: base                  >= 4.10    && < 5
                 , attoparsec
                 , bytestring            >= 0.9.1.4
                 , transformers          >= 0.2
                 , resourcet             >= 1.1
                 , conduit               >= 1.2
                 , conduit-extra         >= 1.1
                 , http-types            >= 0.7
                 , http-client           >= 0.5.13  && < 0.8
                 , http-client-tls       >= 0.3     && < 0.4
                 , mtl
                 , unliftio-core

    if flag(aeson)
      build-depends: aeson                 >= 0.8
                   , attoparsec-aeson      >= 2.1

    if !impl(ghc>=7.9)
      build-depends:   void >= 0.5.5
    exposed-modules: Network.HTTP.Conduit
                     Network.HTTP.Client.Conduit
                     Network.HTTP.Simple
    ghc-options:     -Wall

test-suite test
    default-language: Haskell2010
    main-is: main.hs
    other-modules: CookieTest
    type: exitcode-stdio-1.0
    hs-source-dirs: test

    ghc-options:   -Wall
    cpp-options:   -DDEBUG
    build-depends: base >= 4 && < 5
                 , HUnit
                 , hspec >= 1.3
                 , data-default-class
                 , crypton-connection
                 , warp-tls
                 , tls < 1.5 || >= 1.5.2
                 , time
                 , blaze-builder
                 , bytestring
                 , text
                 , transformers
                 , conduit >= 1.1
                 , utf8-string
                 , case-insensitive
                 , unliftio
                 , wai >= 3.0 && < 3.3
                 , warp >= 3.0.0.2 && < 3.4
                 , wai-conduit
                 , http-types
                 , cookie
                 , http-client
                 , http-conduit
                 , conduit-extra
                 , streaming-commons
                 , temporary
                 , resourcet
                 , network

    if flag(aeson)
      build-depends: aeson
                   , attoparsec-aeson      >= 2.1

source-repository head
  type:     git
  location: git://github.com/snoyberg/http-client.git
